fix(deps): bump com.vegardit.no-npe:no-npe-eea-all from 1.3.3 to 1.3.4